# inferops-action

./: .gitignore  Dockerfile  README.md  action.yml  main.py  pyproject.toml
.github/workflows/: test.yml
src/: analyzer.py  github_utils.py  main.py  notifier.py
tests/: test_github_utils.py  test_notifier.py
